--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <h1>Help me choose...</h1>
     <img src="https://i.imgur.com/9vVnGpo.jpg" alt="cat ice" height="200" width="150">
-    <div>
-      <div>
+    <div class="inputSection">
+      <div class="inputs">
         <input placeholder="which flavour">
       </div>
-      <button>Add</button>
+      <button class="addOption">Add</button>
     </div>
     <button>GO</button>
   </body>
