--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="./main.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Help me choose...</h1>
+      <h1>Help me choose...</h1>
     <img src="https://i.imgur.com/9vVnGpo.jpg" alt="cat ice" height="200" width="150">
     <div class="inputSection">
       <div class="inputs">
@@ -14,6 +14,27 @@
       </div>
       <button class="addOption">Add</button>
     </div>
+    <div class="resultSection" ></div>
     <button>GO</button>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script>
+      $(function()  {
+        $('.resultSection').hide()
+
+        var add_option = function()  {
+          $('.inputs').append('<input></input>')
+        }
+
+        $('.addOption').click(add_option)
+
+        var change_color=function()  {
+          $('body').toggleClass("pink")
+        }
+
+        $('h1').click(change_color)
+
+      })
+    </script>
   </body>
 </html>
